--- a/client/src/DietTrack.css
+++ b/client/src/DietTrack.css
@@ -116,11 +116,10 @@
 
 .Macros div .label{
   margin-top: -38px;
-    padding: 6px 12px;
-    font-size: 12px;
-    border-radius: 6px;
-    border: 1px solid #5ba2fe;
-    font-weight: 600;
+  padding: 8px 12px;
+  font-size: 12px;
+  border-radius: 12px;
+  font-weight: 600;
 }
 
 .Macros div .value{
@@ -291,3 +290,88 @@
   gap: 4px;
   cursor: pointer;
 }
+
+
+
+/* Logdiet starts */
+
+.logDiet{
+  margin: 32px 16px;
+}
+
+.nutrionalResults{
+  display: flex;
+  flex-direction: column;
+  padding: 24px 0;
+}
+
+.nutrionalResults > span{
+  color: #444;
+  font-size: 14px;
+
+}
+
+.nutrionalBox{
+  display: flex;
+  justify-content: space-between;
+  overflow-x: scroll;
+  gap: 12px;
+  padding: 12px 0;
+}
+
+.nutrionalBox >  div{
+  display: flex;
+  flex-direction: column;
+  min-width: 250px;
+  max-width: 250px;
+  background-color: #fff;
+  padding: 24px 24px;
+  box-shadow: 1px 4px 8px #00000010;
+  border-radius: 12px;
+  border: 1px solid #00000020;
+  gap: 24px;
+
+}
+
+.nutrionalBox div .foodTitle{
+  display: flex;
+  flex-direction: row;
+align-items: center;
+justify-content: space-between;
+font-size: 14px;
+font-weight: 500;
+}
+
+.nutrionalBox div .foodTitle span{
+    padding: 12px 16px;
+    background: #5ba2fe20;
+    color: #5ba2fe;
+    border-radius: 6px;
+    border: 1px solid #5ba2fe10;
+}
+
+.nutrionalBox > div .foodMacros{
+display: flex;
+justify-content: space-between;
+align-items: center;
+border-top: 1px dashed #5ba2fe;
+padding-top: 12px;
+padding-left: 12px;
+padding-right: 12px;
+}
+
+.nutrionalBox > div .foodMacros span{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px; 
+  font-weight: 600;
+  color: #5ba2fe;
+  font-size: 14px;
+}
+
+.logDiet form{
+  display: flex;
+  flex-direction: column;
+}
+
