--- a/client/src/DietHistoryCalender.css
+++ b/client/src/DietHistoryCalender.css
@@ -40,23 +40,23 @@
   flex-direction: row;
   align-items: center;
   margin: 24px 0;
-  gap: 24px;
+  gap: 16px;
 }
 
 .pageNavigation {
   font-weight: 500;
-  color: #5ba2fe;
+  color: #000000;
   font-size: 16px;
 }
 
 .pageNavigation button {
   border: 1px solid rgba(0, 0, 0, 0.169);
-  border-radius: 12px;
+  border-radius: 20px;
   padding: 20px 24px;
   background-color: #ffffff;
   text-align: center;
   cursor: pointer;
-  box-shadow: 0px 5px 8px #00000020;
+  box-shadow: 0px 0px 4px #00000020;
   transition-duration: 0.3s;
 }
 
