--- a/client/src/index.css
+++ b/client/src/index.css
@@ -660,7 +660,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 16px 32px; 
+  padding: 16px 32px;
   font-size: 12px;
   margin-top: 12px;
   font-weight: 600;
@@ -969,6 +969,8 @@ select {
 
 .workoutLive {
   margin: 32px 12px 120px 12px;
+  position: relative;
+
 }
 
 
@@ -1085,13 +1087,18 @@ select {
 
 .timerActions button {
   background: #fff;
-  box-shadow: 1px 1px 8px #d3e2ff;;
+  box-shadow: 1px 1px 8px #d3e2ff;
+  ;
   padding: 16px;
   border-radius: 20px;
   cursor: pointer;
   border: 1px solid #00000020;
   transition-duration: 0.3s;
   width: 100%;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
 }
 
 .timerActions button:hover {
@@ -1227,6 +1234,7 @@ select {
 
 .workoutImg img {
   width: 100%;
+  height:100%;
   display: block;
   object-fit: cover;
 }
@@ -1349,6 +1357,121 @@ select {
   gap: 12px;
   align-items: center;
 }
+
+.modeSelection{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  background-color: white;
+  width: 350px;
+  height: 150px;
+  border-radius: 24px;
+  box-shadow: 1px 1px 8px #d3e2ff;
+  border: 1px solid #5ba2fe;
+  gap: 56px;
+  padding: 124px 0;
+}
+
+.labelForSelection{
+font-size: 12px;
+background-color: #5ba2fe20;
+padding: 12px 24px;
+border-radius: 50px;
+}
+
+
+.modeSelection .modeButtons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  padding: 0 24px;
+  gap: 12px;
+}
+
+.modeSelection .modeButtons button {
+  border: 0;
+  width: 150px;
+  height: 100px;
+  background-color: #5ba2fe;
+  color: white;
+  padding: 16px 24px;
+  border-radius: 20px;
+  box-shadow: 1px 6px 1px #5ba2fe40;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  font-size: 16px;
+  
+}
+
+.modeSelection button:hover{
+  background-color: #007bff;
+  transition: 0.3s;
+  box-shadow: none;
+  
+}
+
+.mainContent{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.manualDuration{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 32px 0;
+  gap: 16px;
+  background-color: #f9fafe;
+  border-radius: 24px;
+}
+
+.manualDuration label{
+  font-size: 14px;
+}
+
+.manualDuration input {
+  border: 0;
+  border-bottom: 1px solid #5ba2fe;
+  padding: 16px 16px;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.manualDuration input:focus {
+  outline: none;
+  border: 2px solid #5ba2fe60;
+  box-shadow: 0 0 0 3px #5ba2fe20;
+  transition: all 0.1s ease;
+}
+
+.manualDuration input::placeholder {
+  font-size: 12px;
+  font-weight: 600;
+  opacity: 0.8;
+}
+
+.manualDuration span{
+  font-size: 12px;
+}
+
+
+
+
+/* When mode selection is active, blur the background */
+.blurredBackground .mainContent {
+  filter: blur(8px); /* Adjust blur intensity */
+  transition: filter 0.3s ease-in-out;
+  pointer-events: none; /* Prevent interaction with blurred elements */
+}
+
 
 
 
