--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: 'Poppins';
+
 }
 
 /* Register Container */
@@ -495,14 +496,90 @@ body {
   gap: 24px;
 }
 
+.otherMetrics {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  margin: 12px 0;
+}
+
+.otherMetrics>div {
+  background-color: white;
+  padding: 24px 12px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+  border-radius: 12px;
+  width: 100%;
+  display: grid;
+  position: relative;
+}
+
+.otherMetrics>div>.labelCont {
+  display: flex;
+  flex-direction: row;
+  width: 120px;
+  align-items: center;
+  font-size: 12px;
+  gap: 12px;
+  padding: 12px 16px;
+  /* border: 0.5px solid; */
+  border-radius: 12px;
+  position: absolute;
+  top: -12px;
+  background: white;
+  transform: translateX(-50%);
+  left: 50%;
+  box-shadow: 0px 4px 8px #00000020;
+}
+
+.otherMetrics>div>.labelCont span {
+  font-size: 10px;
+}
+
+.otherMetrics>div>.labelCont img {
+  width: 20px;
+}
+
+.otherMetrics .showValues {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin: 24px 0;
+  padding: 12px 12px;
+}
+
+
+.otherMetrics .showValues .value {
+  font-size: 32px;
+  font-weight: 600;
+  color: #5ba2fe;
+}
+
+.otherMetrics .showValues .valueLabel {
+  font-size: 24px;
+  background-color: #5ba2fe20;
+  font-size: 12px;
+  padding: 6px 24px;
+  border-radius: 24px;
+  max-width: fit-content;
+
+}
+
+.otherMetrics .quickActions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
 .bmiTool {
   background-color: #ffffff;
   box-shadow: 0px 4px 8px #00000020;
   border-radius: 12px;
   padding: 24px;
+  color: #5ba2fe;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 24px;
 
 }
 
@@ -514,7 +591,7 @@ body {
 
 .bmiTool .bmiMetric {
   display: flex;
-  gap: 12px;
+  gap: 24px;
   align-items: center;
 }
 
@@ -593,7 +670,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 16px 32px;
-  font-size: 16px;
+  font-size: 14px;
   /* margin-top: 12px; */
   font-weight: 600;
   box-shadow: 0px 6px 0px #bbd9ff;
@@ -610,7 +687,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 16px 32px;
-  font-size: 16px;
+  font-size: 14px;
   /* margin-top: 12px; */
   font-weight: 600;
   box-shadow: 0px 6px 0px #bbd9ff;
@@ -637,19 +714,19 @@ body {
 .bmiInput {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 12px;
 }
 
 .bmiInput label {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .bmiInput input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
+  padding: 12px;
+  border: 1px solid #5ba2fe;
+  border-radius: 12px;
+  font-size: 14px;
 }
 
 .checkButton {
@@ -661,7 +738,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 16px 32px;
-  font-size: 12px;
+  font-size: 14px;
   margin-top: 12px;
   font-weight: 600;
   box-shadow: 0px 6px 0px #bbd9ff;
@@ -1085,7 +1162,8 @@ select {
   width: 100%;
 }
 
-.timerActions button {
+.timerActions button,
+.manualDuration>button {
   background: #fff;
   box-shadow: 1px 1px 8px #d3e2ff;
   ;
@@ -1234,7 +1312,7 @@ select {
 
 .workoutImg img {
   width: 100%;
-  height:100%;
+  height: 100%;
   display: block;
   object-fit: cover;
 }
@@ -1358,7 +1436,7 @@ select {
   align-items: center;
 }
 
-.modeSelection{
+.modeSelection {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -1378,15 +1456,15 @@ select {
   padding: 124px 0;
 }
 
-.labelForSelection{
-font-size: 12px;
-background-color: #5ba2fe20;
-padding: 12px 24px;
-border-radius: 50px;
+.labelForSelection {
+  font-size: 12px;
+  background-color: #5ba2fe20;
+  padding: 12px 24px;
+  border-radius: 50px;
 }
 
 
-.modeSelection .modeButtons{
+.modeSelection .modeButtons {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1407,23 +1485,23 @@ border-radius: 50px;
   cursor: pointer;
   transition-duration: 0.3s;
   font-size: 16px;
-  
+
 }
 
-.modeSelection button:hover{
+.modeSelection button:hover {
   background-color: #007bff;
   transition: 0.3s;
   box-shadow: none;
-  
+
 }
 
-.mainContent{
+.mainContent {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 
-.manualDuration{
+.manualDuration {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1433,7 +1511,7 @@ border-radius: 50px;
   border-radius: 24px;
 }
 
-.manualDuration label{
+.manualDuration label {
   font-size: 14px;
 }
 
@@ -1458,7 +1536,7 @@ border-radius: 50px;
   opacity: 0.8;
 }
 
-.manualDuration span{
+.manualDuration span {
   font-size: 12px;
 }
 
@@ -1467,9 +1545,11 @@ border-radius: 50px;
 
 /* When mode selection is active, blur the background */
 .blurredBackground .mainContent {
-  filter: blur(8px); /* Adjust blur intensity */
+  filter: blur(8px);
+  /* Adjust blur intensity */
   transition: filter 0.3s ease-in-out;
-  pointer-events: none; /* Prevent interaction with blurred elements */
+  pointer-events: none;
+  /* Prevent interaction with blurred elements */
 }
 
 
