--- a/client/src/DietHistoryCalender.css
+++ b/client/src/DietHistoryCalender.css
@@ -1,5 +1,34 @@
 /* Highlight days where calories exceed 2000 */
 
+:root {
+
+  --font-size-Smalltext: 12px;
+
+  --font-size-BigText: 32px;
+
+  --font-size-BodyText: 14px;
+
+  --font-size-ButtonText: 12px;
+
+  --primaryColor: #5BA2FE;
+  --primaryColor50: #5BA2FE80;
+  --secondaryColor: #003881;
+  --secondaryColor50: #00388180;
+  --boxBg: rgb(91, 162, 254, 0.1);
+  --bodyBg: #F6FAFF;
+  --whiteColor: #ffffff;
+  --whiteColor50: #ffffff9a;
+
+
+  --borderRSize-Big: 24px;
+  --borderRSize-Small: 12px;
+
+  --paddingBox: 29px 32px;
+}
+
+
+
+
 .dietHistory {
   margin: 32px 16px;
 }
@@ -14,7 +43,6 @@
 .calendar-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 10px;
   margin-top: 10px;
 }
 
@@ -25,7 +53,6 @@ opacity: 0.2;
 .calenderView {
   display: flex;
   flex-direction: column;
-  background-color: white;
 
 }
 
@@ -79,7 +106,7 @@ opacity: 0.2;
   padding: 24px 12px;
   border-radius: 12px;
   box-shadow: 0px 5px 8px #00000020;
-  cursor: pointer;
+
   transition-duration: 0.3s;
 }
 
@@ -102,6 +129,7 @@ opacity: 0.2;
   box-shadow: 0px 5px 8px #00000020;
   cursor: pointer;
   margin: -32px auto;
+  cursor: pointer;
 }
 
 .monthNav button {
@@ -119,4 +147,106 @@ opacity: 0.2;
   box-shadow: 0px 6px 0px #bbd9ff;
   transition-duration: 0.5s;
   cursor: pointer;
+}
+
+
+.diet-details{
+  display: flex;
+  flex-direction: column;
+  background-color: var(--boxBg);
+  padding: var(--paddingBox);
+  border-radius: var(--borderRSize-Big);
+  gap: 24px;
+}
+
+.diet-details .dietHistoryLabel{
+  font-size: var(--font-size-BodyText);
+  font-weight: 600;
+  color: var(--secondaryColor);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.diet-details .dietHistoryLabel .caloreValue{
+  color: var(--primaryColor);
+  font-size: 16px;
+  background-color: var(--whiteColor50);
+  padding: 6px 12px;
+  border-radius: var(--borderRSize-Small);
+  border-bottom: 2px solid var(--primaryColor);
+}
+
+.calorieDate{
+  display: flex;
+  gap: 6px;
+  align-items: center;
+}
+
+.dietList{
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  align-items: center;
+  border-bottom: 1px solid var(--primaryColor);
+  padding-bottom: 12px;
+}
+
+.dietList .dietListImg{
+  border-radius: var(--borderRSize-Small);
+  background-color: var(--whiteColor50);
+}
+
+.dietList .dietListImg img{
+max-width: 100%;
+max-height: 100%;
+}
+
+.dietList .dietListContent{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.dietList .dietListContent .foodName{
+  font-size: var(--font-size-BodyText);
+  color: var(--secondaryColor);
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  color: var(--secondaryColor);
+  padding-bottom: 12px;
+  border-bottom: 1px dashed var(--secondaryColor50);
+}
+
+
+.foodNutritions{
+  display: flex;
+  font-size: var(--font-size-Smalltext);
+  gap: 12px;
+}
+
+.foodNutritions span{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.diet-details .actionButtons{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
+.diet-details .actionButtons button{
+  background-color: var(--boxBg);
+  border: none;
+  border-radius: var(--borderRSize-Big);
+  padding: 12px 4px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
+
+.diet-details .actionButtons button:hover{
+  background-color: var(--primaryColor50);
 }
