--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,7 +27,20 @@
   --paddingBox: 29px 32px;
 }
 
+@keyframes rotateButton {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
+.save-button:disabled {
+  animation: rotateButton 1s linear infinite;
+  pointer-events: none; 
+  opacity: 0.7; 
+}
 
 body {
   font-family: 'Poppins';
