--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,34 @@
   opacity: 0.7; 
 }
 
+/* NutriLoader.css */
+.nutri-loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px; /* or whatever space the loading box should take */
+  width: 100%;
+}
+
+.nutri-loader-icon {
+  width: 60px;
+  height: 60px;
+  animation: pulseIcon 1.5s infinite ease-in-out;
+}
+
+@keyframes pulseIcon {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
 body {
   font-family: 'Poppins';
   background-color: var(--bodyBg);
