--- a/client/src/DietTrack.css
+++ b/client/src/DietTrack.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 32px 12px;
+  gap: 24px;
+  margin: 32px 16px;
   max-width: 100%;
   /* Ensure the container doesn't overflow */
   box-sizing: border-box;
@@ -32,17 +33,19 @@
 }
 
 .diet-track>.dietSummary {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   width: 100%;
   max-width: 600px;
-  background-color: #fff;
+  background-color: #5ba2fe10;
   padding: 24px 12px;
   box-sizing: border-box;
-  margin: 24px auto;
-  box-shadow: 0 4px 8px #00000020;
-  border-radius: 12px;
+  border-radius: 24px;
+
 }
 
-/* Progress Container */
+
 .progress-container {
   position: relative;
   width: 100%;
@@ -95,22 +98,18 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 10px;
-  /* Add gap between items */
-  margin-top: 20px;
+  gap: 24px;
   border-top: 2px dashed #5ba2fe;
-  padding-top: 24px;
+  padding-top: 32px;
 
 }
 
 .Macros>div {
   flex: 1;
-  /* Distribute space equally */
   text-align: center;
   padding: 24px 12px;
-  background: #ffffff;
-  border-radius: 8px;
-  border: 1px solid #5ba2fe;
+  background: white;
+  border-radius: 24px;
   display: flex;flex-direction: column;
 }
 
@@ -119,12 +118,12 @@
   padding: 8px 12px;
   font-size: 12px;
   border-radius: 12px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .Macros div .value{
   margin-top: 16px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .Macros .carbs > .label{
